fix: fixed horizontal scrolling caused by header

--- a/public/styles.css
+++ b/public/styles.css
@@ -20,7 +20,7 @@ svg {
 .header {
   grid-column: 1 / 3;
   grid-row: 1 / 2;
-  width: 100%;
+  width: 100vw;
   height: 100%;
   min-height: 150px;
 }
@@ -30,7 +30,7 @@ svg {
   grid-row: 1 / 2;
   background: linear-gradient(0deg, rgba(15, 15, 15, 0), rgb(17, 17, 17));
   height: 100%;
-  width: 100%;
+  width: 100vw;
 }
 
 .header-logo {
@@ -116,7 +116,7 @@ svg {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 100%;
+  width: 70%;
 }
 
 .weather-card {
